Fixed padding for nav bar on smallerscreens (991px and below)

--- a/style.css
+++ b/style.css
@@ -2,10 +2,7 @@ body{
     width: 100%;
     height: auto;
 }
-header{
-   
-    
-}
+
 section.A{
     
     background-image: linear-gradient( 150deg, rgb(170, 156, 224) ,white,white,rgb(151, 130, 228) 120%);
@@ -50,4 +47,29 @@ section.A{
 .talk:hover{
     background-color: rgb(92, 92, 196);
     transition: 0.3s ease-in-out;
+}
+@media screen and (max-width: 991px) {
+    .nav-item{
+        padding-left: 0px;
+    }
+    .collapse{
+        padding-left: 0px;
+        padding-right: 0px;  
+    }
+    .navbar-brand{
+        padding-left: 0px;
+    }
+    .talk{   
+        color: white;
+        background-color: blue;
+        border-radius: 5px;
+        font-size: small;
+        font-weight: 600;
+        border: none;
+        padding: 10px 25px ;
+        font-family:Arial, Helvetica, sans-serif;
+        transition: 0.5s ease-in-out;
+        
+    }
+
 }
